// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RhelView Component should have a fallback title: title 1`] = `
<Fragment>
  <PageHeader>
    <PageHeaderTitle
      title="Subscription Watch"
    />
  </PageHeader>
  <PageSection>
    <Connect(RhelGraphCard)
      filterGraphData={
        Array [
          Object {
            "fill": "#8bc1f7",
            "id": "physicalSockets",
            "stroke": "#06c",
          },
          Object {
            "fill": "#a2d9d9",
            "id": "hypervisorSockets",
            "stroke": "#009596",
          },
          Object {
            "id": "threshold",
          },
        ]
      }
      key="lorem ipsum"
      productId="lorem ipsum"
    />
  </PageSection>
</Fragment>
`;

exports[`RhelView Component should render a non-connected component: non-connected 1`] = `
<Fragment>
  <PageHeader>
    <PageHeaderTitle
      title="Dolor sit"
    />
  </PageHeader>
  <PageSection>
    <Connect(RhelGraphCard)
      filterGraphData={
        Array [
          Object {
            "fill": "#8bc1f7",
            "id": "physicalSockets",
            "stroke": "#06c",
          },
          Object {
            "fill": "#a2d9d9",
            "id": "hypervisorSockets",
            "stroke": "#009596",
          },
          Object {
            "id": "threshold",
          },
        ]
      }
      key="lorem ipsum"
      productId="lorem ipsum"
    />
  </PageSection>
</Fragment>
`;
